bk_ida/gccida/c1/validize_mem
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/validize_mem/src/explow.c:1095:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref), ref->fld[0].rtx) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/validize_mem/src/explow.c:1095:42: error: expected expression
if ( !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref), ref->fld[0].rtx) ) 
                                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/validize_mem/src/obj/explow.o] Error 1
